# agentic-podcast-generator

./: .env.example  .gitignore  README.md  agentic_podcast_generator_tutorial.ipynb  agentic_system.db  agentic_system_step_by_step.ipynb  main.py  project_structure.md  pyproject.toml  requirements.txt  sequence.md  system_architecture.md  technical_specifications.md  test_system.py
agents/: __init__.py  base_agent.py  master_agent.py
agents/sub_agents/: __init__.py  keyword_generator.py  post_generator.py  voice_dialog.py  web_researcher.py
config/: __init__.py  settings.py
database/: __init__.py  connection.py  models.py
services/: __init__.py  logger.py  openrouter_client.py  search_api.py  web_scraper.py
tests/: conftest.py  test_agents.py  test_basic.py  test_config.py  test_database.py  test_main.py  test_services.py  test_utils.py
utils/: __init__.py  communication.py  retry.py  validators.py
